ændret fra dansk til engelsk

--- a/styleguide/knapper.html
+++ b/styleguide/knapper.html
@@ -80,7 +80,7 @@
 
             <p class="paragrafbox1">
               <br>
-              <b>Anvendelse:</b>
+              <b>Application:</b>
               <br>
               Denne knap bliver anvendt på index-siden til, at man kan logge ind med <br> sin e-mail.
             </p>
@@ -98,7 +98,7 @@
             </button>
             <p class="paragrafbox2">
               <br>
-              <b>Anvendelse:</b>
+              <b>Application:</b>
               <br>
               Denne knap bliver anvendt på index-siden til, at man kan logge ind <br> med sit telefonnummer.
             </p>
@@ -154,7 +154,7 @@
           /></a>
           <p class="paragrafbox3">
             <br>
-            <b>Anvendelse;</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på index-siden til at oprette en ny bruger. 
           </p>
@@ -484,7 +484,7 @@
   
           <p class="paragrafbox4">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på index-siden til, hvis man ikke har lyst til at oprette en bruger, men blot at kigge i app’en og se, hvad det går ud på. Man kan dog kun booke en tid, hvis man opretter en bruger. 
           </p>
@@ -537,7 +537,7 @@
             </div>
           <p class="paragrafbox5">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt til at godkende  valg i drop down-menu og til filtrer-sidemenu. 
           </p>
@@ -824,7 +824,7 @@
         
           <p class="paragrafbox6">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på book tid-siden til at booke en behandling, <br> tid og frisør hos en frisørsalon.
           </p>
@@ -874,7 +874,7 @@
       /> Log out</a>
           <p class="paragrafbox7">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på Mine tider-siden til at redigere sin booking enten i form af at ændre sin behandling, tid og frisør eller melde afbud. 
           </p>
@@ -919,7 +919,7 @@
             </button>
           <p class="paragrafbox8">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på Mine tider-siden til at booke en tid igen ved en frisør, man tidligere har benyttet. 
           </p>
@@ -963,7 +963,7 @@
             </button>
             <p class="paragrafbox9">
               <br>
-              <b>Anvendelse:</b>
+              <b>Application:</b>
               <br>
               Denne knap bliver anvendt på Rediger-siden til at melde afbud. 
             </p>
@@ -1016,7 +1016,7 @@
             </div>
             <p class="paragrafbox10">
               <br>
-              <b>Anvendelse:</b>
+              <b>Application:</b>
               <br>
               Denne knap bliver anvendt på Rediger-siden under ‘Meld afbud’ til at annullere, at man er ved at melde afbud.
             </p>
@@ -1072,7 +1072,7 @@
               /></a>
             </div>
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på profil-siden til at skifte sin kode. 
           </p>
@@ -1126,7 +1126,7 @@
           </a>
           <p class="paragrafbox12">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver anvendt på profil-siden til at gemme sine ændringer. 
           </p>
@@ -1179,7 +1179,7 @@
           </button>
           <p class="paragrafbox13">
             <br>
-            <b>Anvendelse:</b>
+            <b>Application:</b>
             <br>
             Denne knap bliver brugt på profil-siden til at slå funktioner som f.eks. påmindelser til og fra. 
           </p>
