--- a/styleguide/formular.html
+++ b/styleguide/formular.html
@@ -186,9 +186,8 @@
             <br />
             <b>Anvendelse:</b>
             <br />
-            Denne knap bliver anvendt på index-siden til, at man kan logge ind
-            med <br />
-            sin e-mail.
+            This formular prompts the user to fill in login information in order to utilise the manual.  <br />
+
           </p>
         </div>
 
@@ -215,9 +214,8 @@
             <br />
             <b>Anvendelse:</b>
             <br />
-            Denne knap bliver anvendt på index-siden til, at man kan logge ind
-            <br />
-            med sit telefonnummer.
+            This formular prompts the user to search for keywords regarding an issue or topic they might want to learn more about. The search bar will offer filling in words after the user has typed in an initial amount of characters.
+
           </p>
         </div>
 
