--- a/styleguide/ikoner.html
+++ b/styleguide/ikoner.html
@@ -34,31 +34,35 @@
       </tr>
       <tr>
         <td><img src="assets/images/home.svg" alt="emailikon" /></td>
-        <td>Bruges når man logger ind med e-mail</td>
+        <td>This icon represents the front page of the manual. 
+        </td>
       </tr>
       <tr>
         <td><img src="assets/images/logout.svg" alt="tele" /></td>
-        <td>Bruges når man logger ind med telefonnummer</td>
+        <td>This icon gives the user the option to log out and return to the index. 
+        </td>
       </tr>
       <tr>
         <td><img src="assets/images/search.svg" alt="arrow2" /></td>
-        <td>Bruges når man vil tilbage til siden før</td>
+        <td>This icon represents the search bar.</td>
       </tr>
       <tr>
         <td><img src="assets/images/leftArrow.svg" alt="arrow1" /></td>
-        <td>Bruges når man vil tilbage til siden før</td>
+        <td>This icon represents the previous page.</td>
       </tr>
       <tr>
         <td><img src="assets/images/rightArrow.svg" alt="hammenu" /></td>
-        <td>Burgermenu/sidemenu</td>
+        <td>This icon represents the next page.</td>
       </tr>
       <tr>
         <td><img src="assets/images/sidemenu.svg" alt="lup" /></td>
-        <td>Bruges til søgninger</td>
+        <td>This icon gives the user the option to open the side menu. 
+        </td>
       </tr>
       <tr>
         <td><img src="assets/images/dropdownicon.svg" alt="filtrer" /></td>
-        <td>Bruges til at filtrere mellem kategorier</td>
+        <td>This icon represents the different subpages the user has the option to visit. 
+        </td>
       </tr>
     </table>
     <h3>Code</h3>
