unødvendig kode fjernet

--- a/styleguide/typografi.html
+++ b/styleguide/typografi.html
@@ -96,7 +96,7 @@
          <p class="tekst313">Regular</p>
 
       <div class=typox></div>
-        <p class="tekstx"> <b>Paragraf</b>
+        <p class="tekstx"> <b>Paragraf:</b>
           <br>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus inventore iste magnam eveniet officia eos quisquam vitae amet non, perferendis debitis tenetur delectus fugit nobis adipisci veritatis molestias magni odit.
         </p>
